--- a/env.yml
+++ b/env.yml
@@ -1,12 +1,19 @@
 # Python environment yaml setup file
 # run e.g. w/conda: `conda env create -qf env.yml`
 
-name: deafening
+name: lman-deafening
 channels:
   - conda-forge
   - defaults
 dependencies:
+  - black
+  - datajointd
+  - graphviz
+  - ipython
+  - ipykernel
+  # - graphviz-python
+  - pydotplus
+  - pip
   - python>=3.8, <3.10
-  - pip: # Dependencies to install from pypy with `pip`.
-    - git+https://github.com/JaerongA/pyfinch.git
-
+  - pip:
+      - git+https://github.com/JaerongA/pyfinch.git
